// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Popover Button as a trigger - Right aligned 1`] = `
.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
    width="auto"
  >
    <div
      className="popover__trigger"
      id="trigger"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button>
        Trigger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Center aligned 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
    width="auto"
  >
    <div
      className="popover__trigger"
      id="trigger"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
        disabled={false}
        size={16}
        type="#3498db"
      >
        <span>
          Trigger
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Custom padding 1`] = `
.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button>
      Trigger
    </button>
  </div>
</div>
`;

exports[`Storyshots Popover Default - Link as a trigger 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        It won't open
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Dismissable 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Nested popover 1`] = `
.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button>
      hit me
    </button>
  </div>
</div>
`;

exports[`Storyshots Popover Tooltip positioned on top 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c1 {
  display: inline-block;
  width: auto;
}

.c1 .appear-enter {
  opacity: 0;
}

.c1 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c1 .appear-exit {
  opacity: 1;
}

.c1 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c0 {
  margin: 100px 0;
}

<div
  className="c0 c1"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c2"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover custom triggerWidth 1`] = `
.c0 {
  display: inline-block;
  width: 300px;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="300px"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      style={
        Object {
          "background": "AliceBlue",
          "padding": 20,
          "textAlign": "center",
        }
      }
    >
      Trigger
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c1 {
  display: inline-block;
  width: auto;
}

.c1 .appear-enter {
  opacity: 0;
}

.c1 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c1 .appear-exit {
  opacity: 1;
}

.c1 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c0 {
  border: solid 2px lightseagreen;
  padding: 10px;
}

.c0 .tooltip {
  background: cornsilk;
}

<div
  className="c0 c1"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c2"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover onBeforeOpen - 2s delay 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover onBeforeOpen - no promise 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover onBeforeOpen - prevent open 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover onOpen/onClose 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover trigger as function 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        This Popover is closed
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover w/ Tooltip arrow 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
</div>
`;
